[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://assets/Kenney Pixel Square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/temp-title.png" type="Texture" id=3]
[ext_resource path="res://assets/exmas_music.wav" type="AudioStream" id=4]
[ext_resource path="res://PlayButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://CreditsButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Transition.tscn" type="PackedScene" id=7]
[ext_resource path="res://TitleScreen.gd" type="Script" id=8]
[ext_resource path="res://assets/Start game button.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/Menu clicking.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/tutorial.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 480, 320 )
texture = ExtResource( 1 )

[node name="TitleScreen" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TitleScreen"]
margin_left = 120.0
margin_top = 80.0
margin_right = 959.0
margin_bottom = 592.0

[node name="VBoxContainer" type="VBoxContainer" parent="TitleScreen/HBoxContainer"]
margin_right = 451.0
margin_bottom = 512.0

[node name="TextureRect" type="TextureRect" parent="TitleScreen/HBoxContainer/VBoxContainer"]
margin_right = 451.0
margin_bottom = 149.0
texture = ExtResource( 3 )

[node name="MenuOptions" type="VBoxContainer" parent="TitleScreen/HBoxContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 451.0
margin_bottom = 484.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="Play" parent="TitleScreen/HBoxContainer/VBoxContainer/MenuOptions" instance=ExtResource( 5 )]
margin_top = 75.0
margin_right = 451.0
margin_bottom = 155.0

[node name="CreditsButton" parent="TitleScreen/HBoxContainer/VBoxContainer/MenuOptions" instance=ExtResource( 6 )]
margin_top = 175.0
margin_right = 451.0
margin_bottom = 255.0

[node name="studio" type="Label" parent="TitleScreen/HBoxContainer/VBoxContainer"]
margin_top = 488.0
margin_right = 451.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( -708.248, -254 )
custom_fonts/font = SubResource( 1 )
text = "Bard Development v0.0.0"

[node name="CenterContainer" type="CenterContainer" parent="TitleScreen/HBoxContainer"]
margin_left = 455.0
margin_right = 807.0
margin_bottom = 512.0

[node name="TextureRect" type="TextureRect" parent="TitleScreen/HBoxContainer/CenterContainer"]
margin_top = 16.0
margin_right = 352.0
margin_bottom = 496.0
texture = ExtResource( 11 )

[node name="Transition" parent="." instance=ExtResource( 7 )]

[node name="CreditsSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="StartGameSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -4.489

[node name="GameSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
autoplay = true
[connection signal="fade_finished" from="Transition" to="." method="_on_Transition_fade_finished"]
